master

2.34.1
- Mayhem
  Add /wsg/ archive redirection.

2.34.0
- Mayhem
  New feature: Menu, which
    - replaces and includes Report Button and Delete Button.
    - add one-click Filter buttons.
    - add download links to automatically save the file with its original filename. Chrome-only currently.
    - add archive links.
    - can integrate features from external userscripts/extensions, see https://github.com/MayhemYDG/4chan-x/wiki/Menu-API
  The updater's refresh interval will now increase gradually in inactive threads:
    - "Inactive thread" defines a thread that has not received any replies since its last refresh.
    - Threads receiving a reply will have its updater interval reset to user's setting.
    - The refresh interval will grow up to 90 seconds on visible tabs.
    - Unfocused tabs will grow up to 120, 300, then 600 seconds.
    - It takes at least 230 seconds to get to 120, at least 350 seconds to get to 300, and at least 650 seconds to get to 600.
    - Focusing back to a tab will reset its inactivity state to normal.
    - It basically changes nothing, but it salvages 4chan from being slaughtered by a massive amount of concurrent connections.
    - see http://www.4chan.org/tmp/extensions.html
  The updater's refresh interval is now limited to 5 seconds minimum.
  Fix the Settings' window size on small screens, should be useable on Opera Mobile.

2.33.8
- Mayhem
  Add Country filtering.

2.33.7
- Mayhem
  Add /ck/ archive redirection.

2.33.6
- Mayhem
  Update/fix archive redirection method.

2.33.5
- Mayhem
  Add /sp/ archive redirection.

2.33.4
- Mayhem
  Fix QR with the new captcha loading method.
  The QR will now work on /f/ too.

2.33.3
- Mayhem
  Revert changes that broke fetchers in Firefox.

2.33.2
- Mayhem
  After 1000+ characters, a character counter will appear in the QR.
  Add /soc/ archive redirection.

2.33.1
- Mayhem
  Add /r9k/ archive redirection.

2.33.0
- btmcsweeney
  Allow users to specify text for sauce links.
- Mayhem