@@ -111,7 +111,7 @@
       Menu: {
         'Menu': [true, 'Add a drop-down menu in posts.'],
         'Report Link': [true, 'Add a report link to the menu.'],
-        'Delete Link': [true, 'Add a delete link to the menu.'],
+        'Delete Link': [true, 'Add post and image deletion links to the menu.'],
         'Download Link': [true, 'Add a download with original filename link to the menu. Chrome-only currently.'],
         'Archive Link': [true, 'Add an archive link to the menu.']
       },
@@ -4067,33 +4067,59 @@
 
   DeleteLink = {
     init: function() {
-      var a;
-      a = $.el('a', {
+      var aImage, aPost, children, div;
+      div = $.el('div', {
         className: 'delete_link',
+        textContent: 'Delete'
+      });
+      aPost = $.el('a', {
+        className: 'delete_post',
         href: 'javascript:;'
       });
-      return Menu.addEntry({
-        el: a,
-        open: function(post) {
-          if (post.isArchived) {
-            return false;
-          }
-          a.textContent = 'Delete this post';
-          $.on(a, 'click', DeleteLink["delete"]);
+      aImage = $.el('a', {
+        className: 'delete_image',
+        href: 'javascript:;'
+      });
+      children = [];
+      children.push({
+        el: aPost,
+        open: function() {
+          aPost.textContent = 'Post';
+          $.on(aPost, 'click', DeleteLink["delete"]);
           return true;
         }
       });
+      children.push({
+        el: aImage,
+        open: function(post) {
+          if (!post.img) {
+            return false;
+          }
+          aImage.textContent = 'Image';
+          $.on(aImage, 'click', DeleteLink["delete"]);
+          return true;
+        }
+      });
+      return Menu.addEntry({
+        el: div,
+        open: function(post) {
+          return !post.isArchived;
+        },
+        children: children
+      });
     },
     "delete": function() {
-      var board, form, id, m, pwd, self;
+      var board, form, id, m, menu, pwd, self;
       $.off(this, 'click', DeleteLink["delete"]);
       this.textContent = 'Deleting...';
       pwd = (m = d.cookie.match(/4chan_pass=([^;]+)/)) ? decodeURIComponent(m[1]) : $.id('delPassword').value;
-      id = this.parentNode.dataset.id;
-      board = $('.postNum > a[title="Highlight this post"]', $.id(this.parentNode.dataset.rootid)).pathname.split('/')[1];
+      menu = $.id('menu');
+      id = menu.dataset.id;
+      board = $('.postNum > a[title="Highlight this post"]', $.id(menu.dataset.rootid)).pathname.split('/')[1];
       self = this;
       form = {
         mode: 'usrdel',
+        onlyimgdel: /\bdelete_image\b/.test(this.className),
         pwd: pwd
       };
       form[id] = 'delete';
