@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Divide the Delete Link in the Menu into a Post and Image deletion links.
 
 2.34.1
 - Mayhem
